Align exceptions and string formatting